<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartedActivity">

    <TextView
        android:id="@+id/Tv_Started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="64dp"/>

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Tv_Started"
        app:srcCompat="@drawable/logo_1" />


    <Button
        android:id="@+id/btn_masuk"
        android:layout_width="382dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/secondary"
        android:text="@string/masuk"
        app:cornerRadius="8dp"
        />

    <Button
        android:id="@+id/btn_daftar"
        android:layout_width="382dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/secondary"
        android:text="@string/daftar"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_masuk"
        app:layout_constraintVertical_bias="0.194" />


</androidx.constraintlayout.widget.ConstraintLayout>