<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="100dp">


        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="197dp"
            android:layout_height="161dp"
            android:layout_marginTop="40dp"
            android:contentDescription="Logo"
            android:src="@drawable/logo_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Judul Masuk -->
        <TextView
            android:id="@+id/tv_Daftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/daftar"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo" />


        <TextView
            android:id="@+id/tv_Nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/nama"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_Daftar" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edittext_background"
            android:hint="Masukan Nama Lengkap"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/tv_Nama"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_NIK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="NIK"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameEditText" />

        <EditText
            android:id="@+id/nikEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edittext_background"
            android:hint="Masukan NIK Anda"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/tv_NIK"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_hp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/hp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nikEditText" />

        <EditText
            android:id="@+id/hpEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edittext_background"
            android:hint="Masukan Nomor Telepon"
            android:inputType="number"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/tv_hp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/email"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hpEditText" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edittext_background"
            android:drawableEnd="@drawable/ic_mail"
            android:hint="Masukan Email"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/tv_Email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/password"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/emailEditText"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edittext_background"
            android:drawableEnd="@drawable/ic_eyes"
            android:hint="Masukan Kata sandi"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/tv_Password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_confirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/confirmpassword"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/passwordEditText"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/confirmpasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edittext_background"
            android:drawableEnd="@drawable/ic_eyes"
            android:hint="Masukan Ulang Kata sandi"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/tv_confirmPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <CheckBox
            android:id="@+id/cb_syaratketentuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:buttonTint="@color/white"
            android:checked="false"
            android:text="@string/syaratketentuan"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/confirmpasswordEditText"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_daftar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/secondary"
            android:text="@string/daftar"
            app:cornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@id/cb_syaratketentuan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_sdh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sdh"
            android:textColor="@color/white"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/btn_daftar"
            app:layout_constraintEnd_toStartOf="@id/tv_Masuk"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_Masuk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/masuk"
            android:textColor="@color/secondary"
            app:layout_constraintTop_toBottomOf="@id/btn_daftar"
            app:layout_constraintStart_toEndOf="@id/tv_sdh"
            app:layout_constraintEnd_toEndOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>